# aarchup

./: PKGBUILD  PKGBUILD~  README  README.md  aarchup.install
src/: CHANGELOG  CHANGELOG~  INSTALL  Makefile.in  README  aarchup.1  aarchup.c  aarchup.desktop  aarchupstartup.sh  configure.in  cronhourly.example
src/systemd_files/: aarchup.service  aarchup.timer  noxaarchup.sh
