dnl Copyright 2010 Rorschach <r0rschach@lavabit.com>
dnl
dnl This program is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>. 

AC_INIT(aarchup.c)

AC_PREREQ(2.65)
            
AC_PROG_CC

AC_HEADER_STDBOOL

AC_CHECK_FUNCS(setuid,, [AC_MSG_ERROR([Seems your unistd implementation doesn't support setuid])])

AC_SEARCH_LIBS([notify_init],[notify],,AC_MSG_ERROR([Missing libnotify!]),)

AC_CHECK_PROG([pacman_found],[pacman],ok,no)

if test "$pacman_found" != "ok";then
	AC_MSG_ERROR([Missing pacman!])
fi

AC_CHECK_PROG([gzip_found],[gzip],ok,no)

if test "$gzip_found" != "ok";then
        AC_MSG_ERROR([Missing gzip, can't compress manpages!])
fi

AC_COPYRIGHT([aarchup is licensed under the GPL, version 3 or higher.])

AC_OUTPUT(Makefile)
